2008-07-11  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprotatetool.c (gimp_rotate_tool_key_press): simplified.

2008-07-11  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scroll.[ch]
	(gimp_display_shell_get_scaled_image_viewport_offset): New
	function to replace any occurance of

	  shell->disp_[xy]offset - shell->offset_[xy]

	that is just an implementation specific way of saying the same
	thing.

	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-transform.c: Make the code less
	implementation dependant by using the new function.

2008-07-11  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-draw.c
	(gimp_display_shell_draw_area): Update comment.

2008-07-11  Tor Lillqvist  <tml@novell.com>

	* app/app.c: Drop duplicated #include <gegl.h>.

	* app/gui/gui-unique.c (idle_open_data_new): Fix g_slice_new()
	use.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/selection-to-path/pxl-outline.c (append_coordinate):
	use g_printerr() for debug output.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-unique.c: dispatch opening to an idle handler.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: removed reference to gimp-remote(1).

2008-07-11  Sven Neumann  <sven@gimp.org>

	* configure.in
	* docs/Makefile.am: made the build of gimp-remote optional and
	disable it by default.

	* INSTALL: document the --enable-gimp-remote configure option.

2008-07-11  Tor Lillqvist  <tml@novell.com>

	* app/unique.c (gimp_unique_filename_to_uri): Check GError being
	unset correctly.
	(gimp_unique_win32_open): Add missing semicolon.

	* app/gui/gui-unique.c: Include <windows.h> on Windows.
	(gui_unique_win32_init): Drop unused variable.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpscanconvert.c
	* app/vectors/gimpbezierstroke.c
	* app/vectors/gimpvectors.c: include <cairo.h> instead of
	<cairo/cairo.h>.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* app/unique.c